Finished implementing the initialization stuff Started implementing getBoardDetails, but i dont think it is what I think it is... hahaha

--- a/STK500.html
+++ b/STK500.html
@@ -9,6 +9,8 @@
 		<link href="css/default.css" rel="stylesheet" type="text/css">
 		
 		<script src="STK500.js"></script>
+		<script src="chrome.js"></script>
+		
 	</head>
 	<body>
 		
